--- a/index.html
+++ b/index.html
@@ -1,86 +1,167 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>WebStudio</title>
-  <meta name="Webstudio" content="WebStudio - Effective Solutions
-for Your Business">
+  <meta name="description" content="WebStudio - Effective Solutions for Your Business" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet" />
+
+  <!-- Modern Normalize -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
   <!-- ========================= HEADER ========================= -->
-<header>
-  <nav aria-label="Головна навігація сайту">
-  <a href="./index.html">WebStudio</a>
-  <ul>
-  <li><a href="#studio">Studio</a></li>
-  <li><a href="#portfolio">Portfolio</a></li>
-  <li><a href="#contacts">Contacts</a></li>
-  </ul>
-  </nav>
-<address>
-<ul>
-  <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-  <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-</ul>
-</address>
-</header>
-<!-- ========================= MAIN ========================= -->
-<main>
-  <section>
-  <h1>Effective Solutions for Your Business</h1>
-  <button type="button">Order Service</button>
-  </section>
-  <!-- =================== section benefits ============== -->
-  <section>
-  <h2>Benefits</h2>
-  <ul>
-    <li><h3>Strategy</h3>
-    <p>Our goal is to identify the business
-    problem to walk away with the perfect and creative solution.
+  <header class="header">
+    <nav class="nav" aria-label="main navigation">
+      <a class="logo" href="./index.html">WebStudio</a>
+      <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="#studio">Studio</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contacts">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+    <address class="contacts">
+      <ul class="contacts-list">
+        <li class="contacts-item">
+          <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contacts-item">
+          <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </address>
+  </header>
+
+  <!-- ========================= MAIN ========================= -->
+  <main>
+    <!-- Hero section -->
+    <section class="hero">
+      <h1 class="hero-title">Effective Solutions for Your Business</h1>
+      <button class="hero-button" type="button">Order Service</button>
+    </section>
+
+    <!-- Benefits section -->
+    <section class="benefits" id="studio">
+      <h2 class="section-title">Benefits</h2>
+      <ul class="benefits-list">
+        <li class="benefits-item">
+          <h3 class="benefits-subtitle">Strategy</h3>
+          <p class="benefits-text">
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
+        <li class="benefits-item">
+          <h3 class="benefits-subtitle">Punctuality</h3>
+          <p class="benefits-text">
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <li class="benefits-item">
+          <h3 class="benefits-subtitle">Diligence</h3>
+          <p class="benefits-text">
+            Research and confirm brands with the strongest digital growth
+            opportunities and minimize risk.
+          </p>
+        </li>
+        <li class="benefits-item">
+          <h3 class="benefits-subtitle">Technologies</h3>
+          <p class="benefits-text">
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Team section -->
+    <section class="team">
+      <h2 class="section-title">Our Team</h2>
+      <ul class="team-list">
+        <li class="team-item">
+          <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
+          <h3 class="team-name">Mark Guerrero</h3>
+          <p class="team-position">Product Designer</p>
+        </li>
+        <li class="team-item">
+          <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
+          <h3 class="team-name">Tom Ford</h3>
+          <p class="team-position">Frontend Developer</p>
+        </li>
+        <li class="team-item">
+          <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260" />
+          <h3 class="team-name">Camila Garcia</h3>
+          <p class="team-position">Marketing</p>
+        </li>
+        <li class="team-item">
+          <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
+          <h3 class="team-name">Daniel Wilson</h3>
+          <p class="team-position">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Portfolio section -->
+    <section class="portfolio" id="portfolio">
+      <h2 class="section-title">Our Portfolio</h2>
+      <ul class="portfolio-list">
+        <li class="portfolio-item">
+          <img src="./images/banking-app.jpg" alt="Banking App" width="370" height="294" />
+          <h3 class="portfolio-name">Banking App</h3>
+          <p class="portfolio-category">App</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="370" height="294" />
+          <h3 class="portfolio-name">Cashless Payment</h3>
+          <p class="portfolio-category">Marketing</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="./images/meditation-app.jpg" alt="Meditation App" width="370" height="294" />
+          <h3 class="portfolio-name">Meditation App</h3>
+          <p class="portfolio-category">App</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="./images/taxi-service.jpg" alt="Taxi Service" width="370" height="294" />
+          <h3 class="portfolio-name">Taxi Service</h3>
+          <p class="portfolio-category">Marketing</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="370" height="294" />
+          <h3 class="portfolio-name">Screen Illustrations</h3>
+          <p class="portfolio-category">Design</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="./images/online-courses.jpg" alt="Online Courses" width="370" height="294" />
+          <h3 class="portfolio-name">Online Courses</h3>
+          <p class="portfolio-category">Marketing</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <!--===============footer======================-->
+  <footer class="footer" id="contacts">
+    <a class="logo" href="./index.html">WebStudio</a>
+    <p class="footer-text">
+      Increase the flow of customers and sales for your business with digital
+      marketing & growth solutions.
     </p>
-    </li>
-    <li><h3>Punctuality</h3><p>Bring the key message to the brand's audience for the best price within the shortest possible time.
-    </p>
-    </li>
-    <li><h3>Diligence</h3>
-    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.
-    </p>
-    </li>
-    <li><h3>Technologies</h3>
-    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-    </p>
-    </li>
-  </ul>
-</section>
-<!-- ================ section our team =================== -->
-<section>
-  <h2>Our Team</h2>
-  <ul>
-    <li>
-      <img src="./images/img-3.jpg" alt="Mark Guerrerro photo" width="264"><h3>Mark Guerrero</h3><p>Product Designer
-      </p>
-    </li>
-    <li>
-      <img src="./images/img-2.jpg" alt="Tom Ford photo" width="264"><h3>Tom Ford</h3><p>Frontend Developer
-     </p>
-    </li>
-    <li>
-      <img src="./images/img-1.jpg" alt="Camila Garcia photo" width="264"><h3>Camila Garcia</h3><p>Marketing
-     </p>
-    </li>
-    <li>
-    <img src="./images/img.jpg" alt="Daniel Wilson photo" width="264"><h3>Daniel Wilson</h3><p>UI Designer
-     </p>
-    </li>
-  </ul>
-</section>
-</main>
-<!--===============footer======================-->
-<footer>
-  <a href="./index.html">WebStudio</a>
-  <p>
-    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-  </p>
-</footer>
+  </footer>
+</body>
+
+</html>
