--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <!-- ========================= HEADER ========================= -->
   <header class="header">
     <nav class="nav" aria-label="main navigation">
-      <a class="logo" href="./index.html">WebStudio</a>
+      <a href="./index.html" class="header-logo">Web<span class="logo">Studio</span>
+</a>
+
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="#studio">Studio</a></li>
         <li class="nav-item">
@@ -48,15 +50,14 @@
 
   <!-- ========================= MAIN ========================= -->
   <main>
-    <!-- Hero section -->
-    <section class="hero">
-      <h1 class="hero-title">Effective Solutions for Your Business</h1>
-      <button class="hero-button" type="button">Order Service</button>
+    <section class="main">
+      <h1 class="main-title">Effective Solutions for Your Business</h1>
+      <button class="main-button" type="button">Order Service</button>
     </section>
 
-    <!-- Benefits section -->
+    <!--benefits-section-->
     <section class="benefits" id="studio">
-      <h2 class="section-title">Benefits</h2>
+      <h2 class="visually-hidden">Benefits</h2>
       <ul class="benefits-list">
         <li class="benefits-item">
           <h3 class="benefits-subtitle">Strategy</h3>
@@ -118,7 +119,7 @@
 
     <!-- Portfolio section -->
     <section class="portfolio" id="portfolio">
-      <h2 class="section-title">Our Portfolio</h2>
+      <h2 class="section-portfolio">Our Portfolio</h2>
       <ul class="portfolio-list">
         <li class="portfolio-item">
           <img src="./images/banking-app.jpg" alt="Banking App" width="370" height="294" />
@@ -156,7 +157,8 @@
 
   <!--===============footer======================-->
   <footer class="footer" id="contacts">
-    <a class="logo" href="./index.html">WebStudio</a>
+  <a href="./index.html" class="footer-logo">Web<span class="logo">Studio</span>
+  </a>
     <p class="footer-text">
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
