--- a/index.html
+++ b/index.html
@@ -7,32 +7,34 @@
   <title>WebStudio</title>
   <meta name="description" content="WebStudio - Effective Solutions for Your Business" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet" />
+<!-- Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+  rel="stylesheet">
 
-  <!-- Modern Normalize -->
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" />
+<!-- Modern Normalize -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="./css/styles.css" />
+<!-- Styles -->
+<link rel="stylesheet" href="./css/styles.css">
 </head>
+
 
 <body>
   <!-- ========================= HEADER ========================= -->
-  <header class="header">
+<header class="header">
     <nav class="nav" aria-label="main navigation">
       <a href="./index.html" class="header-logo">Web<span class="logo">Studio</span>
 </a>
 
       <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="#studio">Studio</a></li>
+        <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
         <li class="nav-item">
-          <a class="nav-link" href="#portfolio">Portfolio</a>
+          <a class="nav-link" href="">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contacts">Contacts</a>
+          <a class="nav-link" href="">Contacts</a>
         </li>
       </ul>
     </nav>
@@ -95,22 +97,22 @@
       <h2 class="section-title">Our Team</h2>
       <ul class="team-list">
         <li class="team-item">
-          <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
+          <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="360" />
           <h3 class="team-name">Mark Guerrero</h3>
           <p class="team-position">Product Designer</p>
         </li>
         <li class="team-item">
-          <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
+          <img src="./images/tom-ford.jpg" alt="Tom Ford" width="360" />
           <h3 class="team-name">Tom Ford</h3>
           <p class="team-position">Frontend Developer</p>
         </li>
         <li class="team-item">
-          <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260" />
+          <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="360" />
           <h3 class="team-name">Camila Garcia</h3>
           <p class="team-position">Marketing</p>
         </li>
         <li class="team-item">
-          <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
+          <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="360" />
           <h3 class="team-name">Daniel Wilson</h3>
           <p class="team-position">UI Designer</p>
         </li>
@@ -122,32 +124,32 @@
       <h2 class="section-portfolio">Our Portfolio</h2>
       <ul class="portfolio-list">
         <li class="portfolio-item">
-          <img src="./images/banking-app.jpg" alt="Banking App" width="370" height="294" />
+          <img src="./images/banking-app.jpg" alt="Banking App" width="360" />
           <h3 class="portfolio-name">Banking App</h3>
           <p class="portfolio-category">App</p>
         </li>
         <li class="portfolio-item">
-          <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="370" height="294" />
+          <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" />
           <h3 class="portfolio-name">Cashless Payment</h3>
           <p class="portfolio-category">Marketing</p>
         </li>
         <li class="portfolio-item">
-          <img src="./images/meditation-app.jpg" alt="Meditation App" width="370" height="294" />
+          <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" />
           <h3 class="portfolio-name">Meditation App</h3>
           <p class="portfolio-category">App</p>
         </li>
         <li class="portfolio-item">
-          <img src="./images/taxi-service.jpg" alt="Taxi Service" width="370" height="294" />
+          <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" />
           <h3 class="portfolio-name">Taxi Service</h3>
           <p class="portfolio-category">Marketing</p>
         </li>
         <li class="portfolio-item">
-          <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="370" height="294" />
+          <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360" />
           <h3 class="portfolio-name">Screen Illustrations</h3>
           <p class="portfolio-category">Design</p>
         </li>
         <li class="portfolio-item">
-          <img src="./images/online-courses.jpg" alt="Online Courses" width="370" height="294" />
+          <img src="./images/online-courses.jpg" alt="Online Courses" width="360" />
           <h3 class="portfolio-name">Online Courses</h3>
           <p class="portfolio-category">Marketing</p>
         </li>
