--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- ========================= HEADER ========================= -->
 <header class="header">
     <nav class="nav" aria-label="main navigation">
-      <a href="./index.html" class="header-logo">Web<span class="logo">Studio</span>
+      <a href="./index.html" class="header-logo">Web<span class="logo-first">Studio</span>
 </a>
 
       <ul class="nav-list">
@@ -159,7 +159,7 @@
 
   <!--===============footer======================-->
   <footer class="footer" id="contacts">
-  <a href="./index.html" class="footer-logo">Web<span class="logo">Studio</span>
+  <a href="./index.html" class="footer-logo">Web<span class="logo-second">Studio</span>
   </a>
     <p class="footer-text">
       Increase the flow of customers and sales for your business with digital
